--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_auth: ^4.20.0
   firebase_core: ^2.32.0
+  firebase_storage: ^11.7.7
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
